# AICC-Trusted-MCP

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml
.codebase/pipelines/: .coveragerc  ci.yaml
.github/workflows/: codeql.yml  python-publish.yml
bytedance/: __init__.py
bytedance/jeddak_secure_channel/: __init__.py  client.py  config.py  consts.py  error.py  merkle_utils.py  ra.py  server.py  utils.py
bytedance/jeddak_secure_channel/crypto/: aes.py  envelope.py  rsa.py
bytedance/jeddak_secure_channel/log/: config.py  logger.py
bytedance/jeddak_trusted_mcp/: __init__.py  async_transformer.py  client.py  common.py  server.py
bytedance/tks/: attester.py  client.py  consts.py  exceptions.py
bytedance/tks/crypto/: aes.py  ec.py
demo/: Makefile  agent.py  aicc_client.py  aicc_server.py  client.py  client_config.json  completions.py  local_client.py  myPrivateKey.pem  myPublicKey.pem  response_util.py  run.sh  server.py  server_config.json
tests/: conftest.py  test_client.py  test_crypto_aes.py  test_crypto_rsa.py  test_merkle_utils.py  test_ra.py  test_utils.py
