[project]
name = "bytedance.jeddak_trusted_mcp"
version = "0.0.1"
dependencies = [
  "bytedance-jeddak-secure-channel",
  "fastmcp",
  "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/bytedance",
]

[tool.pyright]
include = ["bytedance", "demo"]
venvPath = "."
venv = ".venv"
