[project]
name = "bytedance.jeddak_trusted_mcp"
version = "0.0.1"
requires-python = ">= 3.11, <4.0"
description = "Secure communication for Jeddak Trusted MCP"
authors = [
  { name = "bytedance", email = "sunyong.ty@bytedance.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography >= 38.0.0, < 100",
    "requests >= 2.22, < 100",
    "typing_extensions ~= 4.12",
    "loguru ~= 0.7.3",
    "volcengine-python-sdk >= 4.0.4, <= 5",
    "mcp",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "/bytedance",
]

[project.optional-dependencies]
test = [
  "coverage ~= 7.6",
  "pytest ~= 8.3",
  "pytest-mock ~= 3.14",
  "responses ~= 0.25",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
omit = [
  "demo",
  "tests",
  "bytedance/tks",
]

[tool.pyright]
include = ["bytedance", "demo"]
venvPath = "."
venv = ".venv"
